<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.artemovnp.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.artemovnp.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.artemovnp.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.artemovnp.mireaproject.DataFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_webview"
        android:name="ru.mirea.artemovnp.mireaproject.webFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_background_task"
        android:name="ru.mirea.artemovnp.mireaproject.BackgroundTaskFragment"
        android:label="Фоновая задача"
        tools:layout="@layout/fragment_background_task" />

    <fragment
        android:id="@+id/nav_compass"
        android:name="ru.mirea.artemovnp.mireaproject.CompassFragment"
        android:label="Компас"
        tools:layout="@layout/fragment_compass" />

    <fragment
        android:id="@+id/nav_camera_note"
        android:name="ru.mirea.artemovnp.mireaproject.CameraNoteFragment"
        android:label="Фото-заметка"
        tools:layout="@layout/fragment_camera_note" />

    <fragment
        android:id="@+id/nav_voice_note"
        android:name="ru.mirea.artemovnp.mireaproject.VoiceNoteFragment"
        android:label="Голосовая заметка"
        tools:layout="@layout/fragment_voice_note" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.artemovnp.mireaproject.ProfileFragment"
        android:label="Профиль"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_files"
        android:name="ru.mirea.artemovnp.mireaproject.FilesFragment"
        android:label="Работа с файлами"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/nav_news"
        android:name="ru.mirea.artemovnp.mireaproject.NewsFragment"
        android:label="Новости"
        tools:layout="@layout/fragment_news" />
</navigation>